feat: remove custom error response handler and add error response to OpeAPI file
